# DocConAccessReq

./: .env.example  GEMINI.md  README.md  USER_MANUAL_TH.md  architecture.md  docker-compose.yml  nginx.conf  user_manual_th.doc  user_manual_th.html
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: auth.rs  fortigate.rs  handlers.rs  ldap.rs  main.rs  middleware.rs  models.rs  routes.rs
frontend/: index.html  login.html  script.js  style.css
