[package]
name = "firewall-request-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
# Explicitly disable default-features to avoid native-tls/openssl
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15.7"
tower = "0.4"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
validator = { version = "0.18.1", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.10.4"
url-escape = "0.1.1"
# Explicitly disable default-features and pin to a stable version
lettre = { version = "=0.11.7", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
# Authentication Crates
ldap3 = { version = "0.11", default-features = false, features = ["tls-rustls"] }
jsonwebtoken = "9.3"
axum-extra = { version = "0.9", features = ["cookie"] }
cookie = "0.18"
